fix(ui5-tabcontainer): fix overflow item default semantic color (#989)
This is a follow up of Follow up of: #988 where overflow items appearance in negative, positive and critical states have been fixed. However, I missed the default semantic appearance.
Now the default semantic appearance of the overflow item text and icon in active state also looks correct.

--- a/packages/main/src/themes/TabContainer.css
+++ b/packages/main/src/themes/TabContainer.css
@@ -233,14 +233,9 @@
 }
 
 .ui5-tc__overflowItem ui5-icon {
-	color: var(--sapUiNeutralText);
-}
-
-.ui5-tc__overflowItem--positive ui5-icon, 
-.ui5-tc__overflowItem--negative ui5-icon,
-.ui5-tc__overflowItem--critical ui5-icon {
 	color: currentColor;
 }
+
 
 .ui5-tc__content {
 	background-color: var(--sapUiGroupContentBackground);
